# cpu-bound-workers

./: .gitignore  NOTES.md  README.md
api/: Dockerfile  pyproject.toml
api/src/: app.py  main.py
api/src/health/: api.py  test_health_api.py
api/src/matrix_multiplication/: api.py  schema.py  test_matrix_multiplication.py  worker_contract.py
api/src/rmq_setup/: pika_setup.py
k8s/: config.yaml  hpa.yaml  prometheus-adapter-values.yaml  worker-service-monitor.yaml
load_test/: main.py  pyproject.toml
local/: docker-compose.yaml
local/rabbitmq/: definitions.json  rabbitmq.conf
monitoring/: Dockerfile  pyproject.toml
monitoring/src/: app.py
monitoring/src/desired_worker_scale/: api.py
monitoring/src/health/: api.py
monitoring/src/rmq_setup/: pika_setup.py
worker/: Dockerfile  pyproject.toml
worker/src/: handler.py  main.py  worker_contract.py
