[tool.poetry]
name = "cpu-bound-workers load test"
version = "0.1.0"
description = "Load test for CPU-bound worker scaling example"
authors = ["Vinko Buble <vinkobuble@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.4"
locust = "2.29.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
