[tool.poetry]
name = "cpu-bound-workers monitoring API service"
version = "0.1.0"
description = "API service that determines the scale of workers."
authors = ["Vinko Buble <vinkobuble@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.4"
fastapi = "0.111.0"
aiohttp = "^3.9.5"


[tool.poetry.group.dev.dependencies]
httpx = "0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
